--- a/top.html
+++ b/top.html
@@ -29,7 +29,7 @@
                 <img class="tryangle_img" src="img/o-tryangle.png" alt="">
             </div>
             <div class="u-btn">
-                <button onclick="location.href='/question.html'">診断を始める</button>
+                <button onclick="location.href='/datsumou/question.html'">診断を始める</button>
             </div>
         </main>
     </div>
