--- a/question.html
+++ b/question.html
@@ -208,6 +208,15 @@
                     </div>
                 </div>
             </section>
+            <section id="result" class="question_contents result_contents">
+                <h2>
+                    あなたにおすすめのクリニック
+                </h2>
+                <div class="result_txt">
+                    <p>
+                    </p>
+                </div>
+            </section>
         </main>
         <footer>
             <svg width="375" height="110" viewBox="0 0 375 110" fill="none" xmlns="http://www.w3.org/2000/svg">
