--- a/question.html
+++ b/question.html
@@ -226,7 +226,7 @@
                     fill="white" />
             </svg>
             <div class="footer_link footer_link--home">
-                <a href="/top.html"><i class="fas fa-home"></i></a>
+                <a href="top.html"><i class="fas fa-home"></i></a>
             </div>
             <div class="footer_link footer_link--insta">
                 <a href="#"><i class="fab fa-instagram"></i></a>
