--- a/result.html
+++ b/result.html
@@ -16,8 +16,7 @@
 <body>
     <div class="wrap">
         <main>
-            <div id="output"></div>
-            <!-- <section class="result_contents">
+            <section class="result_contents">
                 <h2>あなたにおすすめのクリニック</h2>
                 <div class="result_txt">
                     <p>クリニック名<span>○○○○○○</span></p>
@@ -27,8 +26,8 @@
                 </div>
                 <h2>詳しくはこちら！</h2>
                 <img src="img/bnr01.png" alt="">
-            </section> -->
-            <!-- <section class="result_contents">
+            </section>
+            <section class="result_contents">
                 <h2>あなたにおすすめのクリニック</h2>
                 <div class="result_txt">
                     <p>クリニック名<span>○○○○○○</span></p>
@@ -38,7 +37,7 @@
                 </div>
                 <h2>詳しくはこちら！</h2>
                 <img src="img/bnr01.png" alt="">
-            </section> -->
+            </section>
         </main>
         <footer>
             <svg width="375" height="110" viewBox="0 0 375 110" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +47,7 @@
                     fill="white" />
             </svg>
             <div class="footer_link footer_link--home">
-                <a href="/top.html"><i class="fas fa-home"></i></a>
+                <a href="top.html"><i class="fas fa-home"></i></a>
             </div>
             <div class="footer_link footer_link--insta">
                 <a href="#"><i class="fab fa-instagram"></i></a>
