--- a/question.html
+++ b/question.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="src/js/answer.js"></script>
-    <script src="src/js/test.js"></script>
+    <script src="src/js/result.js"></script>
     <title>脱毛プロジェクト</title>
 </head>
 
