--- a/question.html
+++ b/question.html
@@ -29,12 +29,9 @@
                     <div class="u-btn question_btn">
                         <button class="select" data-point="1">東京</button>
                     </div>
-                    <!-- <div class="u-btn question_btn">
-                        <button>回答２</button>
-                    </div>
                     <div class="u-btn question_btn">
-                        <button>回答３</button>
-                    </div> -->
+                        <button onclick="location.href='error.html'">その他</button>
+                    </div>
                 </div>
             </section>
             <section id="q2" class="question_contents">
