--- a/top.html
+++ b/top.html
@@ -15,11 +15,11 @@
     <div class="wrap">
         <header>
             <h1>
-                <img class="header_img" src="img/header_key.png" alt="美を求めるあなたへ　アンケートに答えて、あなたも美しくなる">
+                <img class="header_img" src="img/header_key_1.png" alt="美を求めるあなたへ　アンケートに答えて、あなたも美しくなる">
             </h1>
             <div class="header_appeal-txt">
                 <p>
-                    あなたに関すること、悩みを教えてください<br>
+                    脱毛のご希望を教えてください<br>
                     あなたにぴったりのクリニックを紹介します
                 </p>
             </div>
@@ -29,7 +29,8 @@
                 <img class="tryangle_img" src="img/o-tryangle.png" alt="">
             </div>
             <div class="u-btn">
-                <button onclick="location.href='question.html'">診断を始める</button>
+                <button style="height: 80px;
+                font-size: 30px;" onclick="location.href='question.html'">診断を始める</button>
             </div>
         </main>
     </div>
