--- a/question.html
+++ b/question.html
@@ -216,12 +216,7 @@
             </section>
         </main>
         <footer>
-            <svg width="375" height="110" viewBox="0 0 375 110" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 49.2638H375V110H0V49.2638Z" fill="#BCFFFF" />
-                <path
-                    d="M375 47.2393C375 73.3288 291.053 89 187.5 89C83.9466 89 0 73.3288 0 47.2393C0 21.1497 83.9466 0 187.5 0C291.053 0 375 21.1497 375 47.2393Z"
-                    fill="white" />
-            </svg>
+            <img src="img/footer_img.png" alt="">
             <div class="footer_link footer_link--home">
                 <a href="top.html"><i class="fas fa-home"></i></a>
             </div>
