--- a/error.html
+++ b/error.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="u-btn u-btn_back question_btn" style="width: 85%;
                 margin: 20px auto 0 auto;">
-                    <button class="back" onclick="location.href='top.html'">戻る</button>
+                    <button class="back" onclick="location.href='top.html'">ホームへ戻る</button>
                 </div>
             </section>
         </main>
